# intract

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SUMD.md  SUMR.md  action.yml  app.doql.less  goal.yaml  index.html  local.dev.txt  pyproject.toml  pyqual.yaml  tree.txt
.github/workflows/: intract.yml  release.yml  vscode-extension.yml
.intract/: engine-state.json
TODO/: 1.md  3.md  4.md  5.md
docs/: README.md  architecture.md  commands.md  contract-format.md  examples.md  executed-next-stage.md  getting-started.md  github-action.md  integrations.md  intent-yaml.md  manifest.md  missing-files-and-roadmap.md  plugins.md  quick-enable.md  roadmap.md  validation.md  watch-engine-planfile.md  watch-engine.md
examples/: README.md
examples/configs/: intent.yaml
examples/csharp/: ScanPipeline.cs
examples/full-stack/: README.md  intract.yaml
examples/full-stack/src/: analyzer.py  parser_a.py  parser_b.py  scanner.py
examples/integration_tests/: run_examples.py
examples/integration_tests/01_python_pass/: README.md  app.py
examples/integration_tests/02_typescript_violation_planfile/: README.md  intent.yaml  permission.ts
examples/integration_tests/02_typescript_violation_planfile/.intract/: TODO.intract.md  planfile-tickets.json  planfile-tickets.yaml
examples/integration_tests/03_watch_engine_drift/: README.md  intent.yaml  reporter.py  scanner.py
examples/integration_tests/03_watch_engine_drift/.intract/: state.json
examples/markdown-generator/: README.md  demo.py  intract.yaml  run-demo.sh
examples/markdown-generator/pass/: generator.py
examples/markdown-generator/violation/: generator.py
examples/showcase/: README.md  index.html  server.py
examples/toon/: Makefile  README.md  intract.toon  intract.toon.yaml  validate.sh
examples/toon/src/: auth.js  calc.py  index.html
examples/typescript/: permission.ts
examples/web-app/: README.md  intract.yaml  run-demo.sh
examples/web-app/iterations/v1-pass/: Dockerfile  README.md  openapi.yaml
examples/web-app/iterations/v1-pass/backend/: auth.py  routes.py
examples/web-app/iterations/v1-pass/frontend/: dashboard.ts
examples/web-app/iterations/v2-violation/: Dockerfile  README.md  openapi.yaml
examples/web-app/mock/: index.html
examples/web-app/mock/reports/: v1-pass.artifacts.json  v1-pass.graph.json  v1-pass.validate.json  v2-violation.artifacts.json  v2-violation.graph.json  v2-violation.validate.json
extensions/vscode-intract/: .vscodeignore  CHANGELOG.md  README.md  extension.js  package.json
extensions/vscode-intract/syntaxes/: intract.tmLanguage.json
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  generated.intract.ci-security.toon  generated.intract.dev.toon  generated.intract.toon  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
schemas/: intract.schema.json
scripts/: ci-full-stack.sh  generate_toon_from_map.py
sdks/csharp/: Intract.Sdk.csproj  IntractContract.cs
sdks/go/: go.mod
sdks/go/examples/: main.go
sdks/go/intractsdk/: sdk.go
sdks/java/: build.gradle
sdks/python/: local.dev.txt  pyproject.toml
sdks/python/src/intract_plugin_example/: __init__.py
sdks/rust/: Cargo.toml
sdks/rust/src/: lib.rs
sdks/typescript/: intract.config.ts  local.dev.txt  package.json  tsconfig.json
sdks/typescript/examples/: basic.ts
sdks/typescript/src/: index.ts
src/intract/: __init__.py  artifacts.py  check.py  cli.py  config.py  coverage.py  duplicates.py  effects.py  git.py  graph.py  manifest_ops.py  manifest_schema.py  mcp_server.py  models.py  normalizer.py  parser.py  policy.py  project.py  proposals.py  propose_llm.py  scan_artifacts.py  sdk.py  signature.py  validate_snippet.py  validation.py  watch.py  yaml_manifest.py
src/intract/analyzers/: __init__.py  blocks.py  csharp.py  go.py  java.py  python_ast.py  rust.py  treesitter.py  typescript.py
src/intract/core/: __init__.py  artifact.py  cache.py  models.py  normalizer.py  registry.py  signatures.py
src/intract/duplicates/: __init__.py  grouping.py  matcher.py  scoring.py
src/intract/engine/: __init__.py  analyzer.py  assigner.py  context.py  drift.py  monitor.py  scanner.py
src/intract/integrations/: __init__.py  nexu.py  planfile.py  planfile_adapter.py  redup.py  vallm.py
src/intract/mcp/: __init__.py  handlers.py  schemas.py  server.py
src/intract/parsers/: __init__.py  inline.py  manifest.py  openapi.py  toon.py
src/intract/plugins/: __init__.py  base.py  builtins.py  manager.py
src/intract/reporters/: sarif.py
src/intract/validators/: __init__.py  artifacts.py  base.py  effects.py  engine.py  input_output.py  registry.py  requirements.py
templates/: .pre-commit-config.yaml  Dockerfile.intract  intract.yaml  openapi.intract.yaml  pyproject-intract.toml
templates/.github/workflows/: intract.yml
testql-scenarios/: generated-cli-tests.testql.toon.yaml
tests/: test_cache.py  test_check_staged.py  test_full_stack.py  test_generate_toon_from_map.py  test_hunk_filter.py  test_integrations.py  test_language_analyzers.py  test_manifest.py  test_manifest_ops.py  test_markdown_generator_example.py  test_mcp.py  test_new_modules.py  test_next_stage.py  test_parser.py  test_planfile_adapter.py  test_policy.py  test_proposals.py  test_python_ast.py  test_redup_policy.py  test_rule_registry.py  test_scan_artifacts.py  test_staged_e2e.py  test_toon.py  test_validate_snippet.py  test_validation.py  test_vallm_integration.py  test_web_app.py
(+3 files in other folders)
